--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!DOCTYPE html><html><head><title>index.html</title></head><body><h1>index.html OK</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Maison Baumann</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <script src="js/script.js" defer></script>
+</head>
+<body>
+  <div id="ambilight"></div>
+
+  <div class="video-container">
+    <video id="heroVideo" autoplay muted loop playsinline>
+      <source src="assets/videos/BAUMANN_FULL.mp4" type="video/mp4" />
+    </video>
+    <button id="enableSound">Activer le son</button>
+  </div>
+
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="about.html">À propos</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="https://www.instagram.com/baumannaile" target="_blank">@baumannaile</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main class="gallery">
+    <!-- Tu peux dupliquer cette ligne pour afficher toutes tes images -->
+    <img src="assets/images/gallery_1.jpg" alt="">
+    <img src="assets/images/gallery_2.jpg" alt="">
+    <img src="assets/images/gallery_3.jpg" alt="">
+    <img src="assets/images/gallery_4.jpg" alt="">
+    <img src="assets/images/gallery_5.jpg" alt="">
+    <img src="assets/images/gallery_6.jpg" alt="">
+  </main>
+</body>
+</html>
