--- a/about.html
+++ b/about.html
@@ -1,1 +1,30 @@
-<!DOCTYPE html><html><head><title>about.html</title></head><body><h1>about.html OK</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>À propos — Maison Baumann</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="about.html">À propos</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="https://www.instagram.com/baumannaile" target="_blank">@baumannaile</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <section class="about" style="padding: 4rem; max-width: 700px; margin: auto;">
+    <h1 style="margin-bottom: 2rem;">À propos</h1>
+    <p style="line-height: 1.7;">
+      Maison Baumann est une marque indépendante née d’une rencontre entre la mode et le cinéma.  
+      Guidée par Naïlé, styliste, et Thomas, réalisateur, la marque explore un univers onirique où chaque pièce raconte un souvenir, une époque, une émotion.  
+      Chaque collection est pensée comme une narration visuelle, une traversée intime, où l’élégance s’accorde avec la poésie du quotidien.
+    </p>
+  </section>
+</body>
+</html>
