--- a/index.html
+++ b/index.html
@@ -23,19 +23,22 @@
         <li><a href="index.html">Accueil</a></li>
         <li><a href="about.html">À propos</a></li>
         <li><a href="shop.html">Shop</a></li>
+        <li><a href="preorder.html">Panier</a></li>
         <li><a href="https://www.instagram.com/baumannaile" target="_blank">@baumannaile</a></li>
       </ul>
     </nav>
   </header>
 
   <main class="gallery">
-    <!-- Tu peux dupliquer cette ligne pour afficher toutes tes images -->
+    <!-- Inclusion des 18 images -->
     <img src="assets/images/gallery_1.jpg" alt="">
     <img src="assets/images/gallery_2.jpg" alt="">
     <img src="assets/images/gallery_3.jpg" alt="">
     <img src="assets/images/gallery_4.jpg" alt="">
     <img src="assets/images/gallery_5.jpg" alt="">
     <img src="assets/images/gallery_6.jpg" alt="">
-  </main>
-</body>
-</html>
+    <img src="assets/images/gallery_7.jpg" alt="">
+    <img src="assets/images/gallery_8.jpg" alt="">
+    <img src="assets/images/gallery_9.jpg" alt="">
+    <img src="assets/images/gallery_10.jpg" alt="">
+    <img src="assets/images/gallery_11.jpg" alt_
