--- a/shop.html
+++ b/shop.html
@@ -14,11 +14,12 @@
         <li><a href="index.html">Accueil</a></li>
         <li><a href="shop.html">Shop</a></li>
         <li><a href="about.html">À propos</a></li>
+        <li><a href="preorder.html">Panier</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="shop" style="padding: 3rem;">
+  <section class="shop">
     <div class="item">
       <h2>Veste Renaissance</h2>
       <div class="scroll-photos">
@@ -27,32 +28,4 @@
         <img src="assets/images/gallery_3.jpg">
       </div>
       <p>320 €</p>
-      <button onclick="addToCart('Veste Renaissance', 320)">Ajouter au panier</button>
-    </div>
-
-    <div class="item">
-      <h2>Pantalon Horizon</h2>
-      <div class="scroll-photos">
-        <img src="assets/images/gallery_4.jpg">
-        <img src="assets/images/gallery_5.jpg">
-        <img src="assets/images/gallery_6.jpg">
-      </div>
-      <p>260 €</p>
-      <button onclick="addToCart('Pantalon Horizon', 260)">Ajouter au panier</button>
-    </div>
-
-    <div class="item">
-      <h2>Top Patchwork</h2>
-      <div class="scroll-photos">
-        <img src="assets/images/gallery_7.jpg">
-        <img src="assets/images/gallery_8.jpg">
-        <img src="assets/images/gallery_9.jpg">
-      </div>
-      <p>180 €</p>
-      <button onclick="addToCart('Top Patchwork', 180)">Ajouter au panier</button>
-    </div>
-
-    <a href="preorder.html" class="view-cart">Voir le panier</a>
-  </section>
-</body>
-</html>
+      <button onclick="addToCart('Veste Renaissance',
