--- a/preorder.html
+++ b/preorder.html
@@ -17,10 +17,10 @@
     </nav>
   </header>
 
-  <section class="cart" style="padding: 3rem;">
-    <h1>Panier</h1>
-    <ul id="cart-list" style="margin: 2rem 0;"></ul>
-    <p id="total" style="margin-bottom: 2rem;"></p>
+  <section class="cart">
+    <h1>Votre panier</h1>
+    <ul id="cart-list"></ul>
+    <p id="total"></p>
     <button onclick="validateOrder()">Précommander</button>
   </section>
 </body>
