--- a/shop.html
+++ b/shop.html
@@ -28,4 +28,32 @@
         <img src="assets/images/gallery_3.jpg">
       </div>
       <p>320 €</p>
-      <button onclick="addToCart('Veste Renaissance',
+      <button onclick="addToCart('Veste Renaissance', 320)">Ajouter au panier</button>
+    </div>
+
+    <div class="item">
+      <h2>Pantalon Horizon</h2>
+      <div class="scroll-photos">
+        <img src="assets/images/gallery_4.jpg">
+        <img src="assets/images/gallery_5.jpg">
+        <img src="assets/images/gallery_6.jpg">
+      </div>
+      <p>260 €</p>
+      <button onclick="addToCart('Pantalon Horizon', 260)">Ajouter au panier</button>
+    </div>
+
+    <div class="item">
+      <h2>Top Patchwork</h2>
+      <div class="scroll-photos">
+        <img src="assets/images/gallery_7.jpg">
+        <img src="assets/images/gallery_8.jpg">
+        <img src="assets/images/gallery_9.jpg">
+      </div>
+      <p>180 €</p>
+      <button onclick="addToCart('Top Patchwork', 180)">Ajouter au panier</button>
+    </div>
+
+    <a href="preorder.html" class="view-cart">Voir le panier</a>
+  </section>
+</body>
+</html>
