--- a/index.html
+++ b/index.html
@@ -1,36 +1,6 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Maison Baumann</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="js/script.js" defer></script>
-</head>
-<body>
-  <div id="ambilight"></div>
-
-  <div class="video-container">
-    <video id="heroVideo" autoplay muted loop playsinline>
-      <source src="assets/videos/BAUMANN_FULL.mp4" type="video/mp4" />
-    </video>
-    <button id="enableSound">Activer le son</button>
-  </div>
-
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="about.html">À propos</a></li>
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="preorder.html">Panier</a></li>
-        <li><a href="https://www.instagram.com/baumannaile" target="_blank">@baumannaile</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main class="gallery">
-    <!-- Inclusion des 18 images -->
+<main>
+  <h2 class="gallery-title">Précédentes collections</h2>
+  <section class="gallery">
     <img src="assets/images/gallery_1.jpg" alt="">
     <img src="assets/images/gallery_2.jpg" alt="">
     <img src="assets/images/gallery_3.jpg" alt="">
@@ -41,4 +11,13 @@
     <img src="assets/images/gallery_8.jpg" alt="">
     <img src="assets/images/gallery_9.jpg" alt="">
     <img src="assets/images/gallery_10.jpg" alt="">
-    <img src="assets/images/gallery_11.jpg" alt_
+    <img src="assets/images/gallery_11.jpg" alt="">
+    <img src="assets/images/gallery_12.jpg" alt="">
+    <img src="assets/images/gallery_13.jpg" alt="">
+    <img src="assets/images/gallery_14.jpg" alt="">
+    <img src="assets/images/gallery_15.jpg" alt="">
+    <img src="assets/images/gallery_16.jpg" alt="">
+    <img src="assets/images/gallery_17.jpg" alt="">
+    <img src="assets/images/gallery_18.jpg" alt="">
+  </section>
+</main>
