--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
+<div id="ambilight"></div>
+
+<div class="video-container">
+  <video id="heroVideo" autoplay muted loop playsinline>
+    <source src="assets/videos/BAUMANN_FULL.mp4" type="video/mp4" />
+  </video>
+  <button id="enableSound">Activer le son</button>
+</div>
+
+<header>
+  <nav>
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="about.html">À propos</a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="preorder.html">Panier</a></li>
+      <li><a href="https://www.instagram.com/baumannaile" target="_blank">@baumannaile</a></li>
+    </ul>
+  </nav>
+</header>
+
 <main>
   <h2 class="gallery-title">Précédentes collections</h2>
   <section class="gallery">
-    <img src="assets/images/gallery_1.jpg" alt="">
-    <img src="assets/images/gallery_2.jpg" alt="">
-    <img src="assets/images/gallery_3.jpg" alt="">
-    <img src="assets/images/gallery_4.jpg" alt="">
-    <img src="assets/images/gallery_5.jpg" alt="">
-    <img src="assets/images/gallery_6.jpg" alt="">
-    <img src="assets/images/gallery_7.jpg" alt="">
-    <img src="assets/images/gallery_8.jpg" alt="">
-    <img src="assets/images/gallery_9.jpg" alt="">
-    <img src="assets/images/gallery_10.jpg" alt="">
-    <img src="assets/images/gallery_11.jpg" alt="">
-    <img src="assets/images/gallery_12.jpg" alt="">
-    <img src="assets/images/gallery_13.jpg" alt="">
-    <img src="assets/images/gallery_14.jpg" alt="">
-    <img src="assets/images/gallery_15.jpg" alt="">
-    <img src="assets/images/gallery_16.jpg" alt="">
-    <img src="assets/images/gallery_17.jpg" alt="">
-    <img src="assets/images/gallery_18.jpg" alt="">
+    <!-- tes 18 images -->
   </section>
 </main>
