--- a/index.html
+++ b/index.html
@@ -1,27 +1,1 @@
-<div id="ambilight"></div>
-
-<div class="video-container">
-  <video id="heroVideo" autoplay muted loop playsinline>
-    <source src="assets/videos/BAUMANN_FULL.mp4" type="video/mp4" />
-  </video>
-  <button id="enableSound">Activer le son</button>
-</div>
-
-<header>
-  <nav>
-    <ul>
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="about.html">À propos</a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="preorder.html">Panier</a></li>
-      <li><a href="https://www.instagram.com/baumannaile" target="_blank">@baumannaile</a></li>
-    </ul>
-  </nav>
-</header>
-
-<main>
-  <h2 class="gallery-title">Précédentes collections</h2>
-  <section class="gallery">
-    <!-- tes 18 images -->
-  </section>
-</main>
+<!-- Nouvelle page d'accueil inspirée de Division -->
