--- a/preorder.html
+++ b/preorder.html
@@ -1,27 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Précommande — Maison Baumann</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <script src="js/script.js" defer></script>
-</head>
-<body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="shop.html">Retour boutique</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <section class="cart">
-    <h1>Votre panier</h1>
-    <ul id="cart-list"></ul>
-    <p id="total"></p>
-    <button onclick="validateOrder()">Précommander</button>
-  </section>
-</body>
-</html>
+<!-- Panier -->
