--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-<!-- Nouvelle page d'accueil inspirée de Division -->
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maison Baumann - Accueil</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Navigation minimaliste -->
+  <header>
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="gallery.html">Collections</a></li>
+        <li><a href="about.html">À propos</a></li>
+        <li><a href="store.html">Boutique</a></li>
+        <li><a href="cart.html">Panier</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Section héro avec vidéo en plein écran -->
+  <section class="hero">
+    <video class="bg-video" autoplay muted loop playsinline>
+      <source src="BAUMANN_FULL.mp4" type="video/mp4">
+      Votre navigateur ne supporte pas la vidéo HTML5.
+    </video>
+    <div class="hero-overlay">
+      <h1>Maison Baumann</h1>
+      <p>Raffinement et élégance</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Maison Baumann. Tous droits réservés.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
