--- a/about.html
+++ b/about.html
@@ -1,1 +1,40 @@
-<!-- À propos -->
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Maison Baumann - À propos</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Navigation -->
+  <header>
+    <nav>
+      <ul class="menu">
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="gallery.html">Collections</a></li>
+        <li><a href="about.html">À propos</a></li>
+        <li><a href="store.html">Boutique</a></li>
+        <li><a href="cart.html">Panier</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Contenu "À propos" -->
+  <main class="about">
+    <h2>À propos de Maison Baumann</h2>
+    <p>
+      Fondée avec passion, Maison Baumann incarne le raffinement et l'élégance. Notre histoire se mêle à une recherche constante de qualité et d'innovation.
+    </p>
+    <p>
+      Nous croyons que la beauté se trouve dans les détails et chaque création est une œuvre d'art conçue pour inspirer. Marier tradition et modernité est notre force pour offrir des produits uniques et intemporels.
+    </p>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Maison Baumann. Tous droits réservés.</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
