--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maison Baumann - Accueil</title>
   <link rel="stylesheet" href="styles.css">
+  <!-- Le script est chargé en différé pour ajouter la classe "mobile" ou "desktop" -->
+  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Navigation minimaliste -->
@@ -35,7 +37,5 @@
   <footer>
     <p>&copy; 2025 Maison Baumann. Tous droits réservés.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
