--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maison Baumann - Collections</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Navigation -->
@@ -47,7 +48,5 @@
   <footer>
     <p>&copy; 2025 Maison Baumann. Tous droits réservés.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
