--- a/store.html
+++ b/store.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maison Baumann - Boutique</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Navigation -->
@@ -42,14 +43,12 @@
         <p class="price">€199,00</p>
         <button class="add-to-cart">Ajouter au panier</button>
       </div>
-      <!-- Ajoutez d'autres produits au besoin -->
+      <!-- Ajoutez d'autres produits si nécessaire -->
     </div>
   </main>
 
   <footer>
     <p>&copy; 2025 Maison Baumann. Tous droits réservés.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
