--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maison Baumann - Panier</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- Navigation -->
@@ -40,7 +41,7 @@
           <td>€99,00</td>
           <td>€99,00</td>
         </tr>
-        <!-- Ajoutez d'autres lignes au besoin -->
+        <!-- Ajoutez d'autres lignes selon vos besoins -->
       </tbody>
     </table>
     <div class="cart-summary">
@@ -52,7 +53,5 @@
   <footer>
     <p>&copy; 2025 Maison Baumann. Tous droits réservés.</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
