--- a/gallery.html
+++ b/gallery.html
@@ -21,27 +21,34 @@
     </nav>
   </header>
 
-  <!-- Galerie en grille asymétrique -->
+  <!-- Titre de la page -->
   <main class="gallery">
-    <div class="grid">
-      <img src="gallery_1.jpg" alt="Collection 1">
-      <img src="gallery_2.jpg" alt="Collection 2">
-      <img src="gallery_3.jpg" alt="Collection 3">
-      <img src="gallery_4.jpg" alt="Collection 4">
-      <img src="gallery_5.jpg" alt="Collection 5">
-      <img src="gallery_6.jpg" alt="Collection 6">
-      <img src="gallery_7.jpg" alt="Collection 7">
-      <img src="gallery_8.jpg" alt="Collection 8">
-      <img src="gallery_9.jpg" alt="Collection 9">
-      <img src="gallery_10.jpg" alt="Collection 10">
-      <img src="gallery_11.jpg" alt="Collection 11">
-      <img src="gallery_12.jpg" alt="Collection 12">
-      <img src="gallery_13.jpg" alt="Collection 13">
-      <img src="gallery_14.jpg" alt="Collection 14">
-      <img src="gallery_15.jpg" alt="Collection 15">
-      <img src="gallery_16.jpg" alt="Collection 16">
-      <img src="gallery_17.jpg" alt="Collection 17">
-      <img src="gallery_18.jpg" alt="Collection 18">
+    <h1 class="gallery-title">MAISON BAUMANN 2024/2025</h1>
+    
+    <!-- Conteneur avec flèches pour desktop -->
+    <div class="gallery-wrapper">
+      <button class="gallery-arrow left desktop" id="gallery-prev">&lt;</button>
+      <div class="gallery-scroll">
+        <img src="gallery_1.jpg" alt="Collection 1">
+        <img src="gallery_2.jpg" alt="Collection 2">
+        <img src="gallery_3.jpg" alt="Collection 3">
+        <img src="gallery_4.jpg" alt="Collection 4">
+        <img src="gallery_5.jpg" alt="Collection 5">
+        <img src="gallery_6.jpg" alt="Collection 6">
+        <img src="gallery_7.jpg" alt="Collection 7">
+        <img src="gallery_8.jpg" alt="Collection 8">
+        <img src="gallery_9.jpg" alt="Collection 9">
+        <img src="gallery_10.jpg" alt="Collection 10">
+        <img src="gallery_11.jpg" alt="Collection 11">
+        <img src="gallery_12.jpg" alt="Collection 12">
+        <img src="gallery_13.jpg" alt="Collection 13">
+        <img src="gallery_14.jpg" alt="Collection 14">
+        <img src="gallery_15.jpg" alt="Collection 15">
+        <img src="gallery_16.jpg" alt="Collection 16">
+        <img src="gallery_17.jpg" alt="Collection 17">
+        <img src="gallery_18.jpg" alt="Collection 18">
+      </div>
+      <button class="gallery-arrow right desktop" id="gallery-next">&gt;</button>
     </div>
   </main>
 
