--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
       Fondée avec passion, Maison Baumann incarne le raffinement et l'élégance. Notre histoire se mêle à une recherche constante de qualité et d'innovation.
     </p>
     <p>
-      Nous croyons que la beauté se trouve dans les détails et chaque création est une œuvre d'art conçue pour inspirer. Marier tradition et modernité est notre force pour offrir des produits uniques et intemporels.
+      Nous croyons que la beauté se trouve dans les détails et que chaque création est une œuvre d'art conçue pour inspirer. Marier tradition et modernité est notre force pour offrir des produits uniques et intemporels.
     </p>
   </main>
 
