--- a/store.html
+++ b/store.html
@@ -24,26 +24,41 @@
   <!-- Boutique -->
   <main class="store">
     <h2>Boutique en ligne</h2>
-    <div class="products-container">
-      <div class="product">
-        <img src="product_1.jpg" alt="Produit 1">
-        <h3>Produit 1</h3>
-        <p class="price">€99,00</p>
-        <button class="add-to-cart">Ajouter au panier</button>
+    <div class="shop-wrapper">
+      <button class="shop-arrow left desktop" id="shop-prev">&lt;</button>
+      <div class="products-container">
+        <div class="product">
+          <div class="product-images">
+            <img src="gallery_12.jpg" alt="Produit 1 image 1">
+            <img src="gallery_13.jpg" alt="Produit 1 image 2">
+            <img src="gallery_10.jpg" alt="Produit 1 image 3">
+          </div>
+          <h3>Produit 1</h3>
+          <p class="price">€99,00</p>
+          <button class="add-to-cart">Ajouter au panier</button>
+        </div>
+        <div class="product">
+          <div class="product-images">
+            <img src="gallery_11.jpg" alt="Produit 2 image 1">
+            <img src="gallery_14.jpg" alt="Produit 2 image 2">
+            <img src="gallery_9.jpg" alt="Produit 2 image 3">
+          </div>
+          <h3>Produit 2</h3>
+          <p class="price">€149,00</p>
+          <button class="add-to-cart">Ajouter au panier</button>
+        </div>
+        <div class="product">
+          <div class="product-images">
+            <img src="gallery_4.jpg" alt="Produit 3 image 1">
+            <img src="gallery_7.jpg" alt="Produit 3 image 2">
+            <img src="gallery_5.jpg" alt="Produit 3 image 3">
+          </div>
+          <h3>Produit 3</h3>
+          <p class="price">€199,00</p>
+          <button class="add-to-cart">Ajouter au panier</button>
+        </div>
       </div>
-      <div class="product">
-        <img src="product_2.jpg" alt="Produit 2">
-        <h3>Produit 2</h3>
-        <p class="price">€149,00</p>
-        <button class="add-to-cart">Ajouter au panier</button>
-      </div>
-      <div class="product">
-        <img src="product_3.jpg" alt="Produit 3">
-        <h3>Produit 3</h3>
-        <p class="price">€199,00</p>
-        <button class="add-to-cart">Ajouter au panier</button>
-      </div>
-      <!-- Ajoutez d'autres produits si nécessaire -->
+      <button class="shop-arrow right desktop" id="shop-next">&gt;</button>
     </div>
   </main>
 
