--- a/store.html
+++ b/store.html
@@ -27,7 +27,8 @@
     <div class="shop-wrapper">
       <button class="shop-arrow left desktop" id="shop-prev">&lt;</button>
       <div class="products-container">
-        <div class="product">
+        <!-- Produit 1 -->
+        <div class="product" data-id="1" data-name="Produit 1" data-price="99">
           <div class="product-images">
             <img src="gallery_12.jpg" alt="Produit 1 image 1">
             <img src="gallery_13.jpg" alt="Produit 1 image 2">
@@ -37,7 +38,8 @@
           <p class="price">€99,00</p>
           <button class="add-to-cart">Ajouter au panier</button>
         </div>
-        <div class="product">
+        <!-- Produit 2 -->
+        <div class="product" data-id="2" data-name="Produit 2" data-price="149">
           <div class="product-images">
             <img src="gallery_11.jpg" alt="Produit 2 image 1">
             <img src="gallery_14.jpg" alt="Produit 2 image 2">
@@ -47,7 +49,8 @@
           <p class="price">€149,00</p>
           <button class="add-to-cart">Ajouter au panier</button>
         </div>
-        <div class="product">
+        <!-- Produit 3 -->
+        <div class="product" data-id="3" data-name="Produit 3" data-price="199">
           <div class="product-images">
             <img src="gallery_4.jpg" alt="Produit 3 image 1">
             <img src="gallery_7.jpg" alt="Produit 3 image 2">
