--- a/cart.html
+++ b/cart.html
@@ -24,29 +24,8 @@
   <!-- Panier -->
   <main class="cart">
     <h2>Votre Panier</h2>
-    <table>
-      <thead>
-        <tr>
-          <th>Produit</th>
-          <th>Quantité</th>
-          <th>Prix</th>
-          <th>Total</th>
-        </tr>
-      </thead>
-      <tbody>
-        <!-- Exemple de produit dans le panier -->
-        <tr>
-          <td>Produit 1</td>
-          <td>1</td>
-          <td>€99,00</td>
-          <td>€99,00</td>
-        </tr>
-      </tbody>
-    </table>
-    <div class="cart-summary">
-      <p>Total général: <strong>€99,00</strong></p>
-      <button class="checkout">Valider la commande</button>
-    </div>
+    <div id="cart-items"></div>
+    <div class="cart-summary" id="cart-summary"></div>
   </main>
 
   <footer>
