--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
     </div>
   </section>
 
+  /* Sur mobile, réduire significativement la hauteur de la section héros */
+body.mobile .hero {
+  height: 25vh; /* ou 20vh selon vos préférences */
+  position: relative;
+  overflow: hidden;
+}
+
+/* La vidéo occupe toute la zone du héros sans zoom excessif */
+body.mobile .bg-video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
   <footer>
     <p>&copy; 2025 Maison Baumann. Tous droits réservés.</p>
   </footer>
