--- a/index.html
+++ b/index.html
@@ -5,6 +5,48 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Maison Baumann - Accueil</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    /* Styles généraux pour la section héro */
+    .hero {
+      position: relative;
+      width: 100%;
+      height: 100vh;
+      overflow: hidden;
+    }
+    .bg-video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transform: translate(-50%, -50%);
+    }
+    .hero-overlay {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      text-align: center;
+      color: #fff;
+    }
+    
+    /* Styles spécifiques pour mobile */
+    @media only screen and (max-width: 768px) {
+      .hero {
+        height: 25vh;  /* Hauteur réduite pour s'adapter à l'écran mobile */
+      }
+      .bg-video {
+        object-fit: contain; /* Affiche toute la vidéo sans zoom */
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        transform: none;
+      }
+    }
+  </style>
   <script src="script.js" defer></script>
 </head>
 <body>
@@ -31,20 +73,6 @@
       <h1>Maison Baumann</h1>
     </div>
   </section>
-
-  /* Sur mobile, réduire significativement la hauteur de la section héros */
-body.mobile .hero {
-  height: 25vh; /* ou 20vh selon vos préférences */
-  position: relative;
-  overflow: hidden;
-}
-
-/* La vidéo occupe toute la zone du héros sans zoom excessif */
-body.mobile .bg-video {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
 
   <footer>
     <p>&copy; 2025 Maison Baumann. Tous droits réservés.</p>
