--- a/index.html
+++ b/index.html
@@ -59,30 +59,18 @@
     .mobile-menu.active {
       display: block;
     }
-    .mobile-menu ul {
-      list-style: none;
-      padding: 0;
-    }
-    .mobile-menu li {
-      margin: 20px 0;
-    }
-    .mobile-menu a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 1.5rem;
-    }
     .overlay {
       display: none;
       position: fixed;
-      top: 0;
-      left: 0;
+      top:0;
+      left:0;
       width: 100%;
       height: 100%;
       background: rgba(0,0,0,0.5);
       z-index: 1040;
     }
     
-    /* --- Section Héros --- */
+    /* --- Section Héros (Desktop) --- */
     .hero {
       position: relative;
       width: 100%;
@@ -90,7 +78,6 @@
       background-color: #000;
       overflow: hidden;
     }
-    /* Conteneur vidéo (positionné en arrière-plan) */
     .video-container {
       position: absolute;
       top: 0;
@@ -99,7 +86,6 @@
       height: 100%;
       z-index: 0;
     }
-    /* Vidéo sur desktop : occupe toute la zone, centrée */
     .bg-video {
       width: 100%;
       height: 100%;
@@ -108,7 +94,7 @@
       display: block;
       border: none;
     }
-    /* Titre centré sur desktop, au centre de la vidéo */
+    /* Titre centré sur desktop */
     .hero-title {
       position: absolute;
       top: 50%;
@@ -120,32 +106,49 @@
       text-shadow: 0 0 5px rgba(0,0,0,0.7);
       white-space: nowrap;
     }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background: rgba(0,0,0,0.8);
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+    }
+    footer p {
+      font-size: 1rem;
+    }
     
     /* --- Adaptations pour Mobile --- */
     @media only screen and (max-width: 768px) {
-      /* La section héro occupe 40% de la hauteur de l'écran */
+      /* Réduire la hauteur de la section héro */
       .hero {
-        height: 40vh;
+        height: 25vh;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
       }
-      /* Sur mobile, la vidéo est affichée en entier sans zoom */
-      .bg-video {
-        object-fit: contain;
-        object-position: center;
-        width: 100%;
-        height: 100%;
-      }
-      /* Le titre est positionné en flux normal, juste au-dessus de la vidéo */
+      /* Le titre est positionné en haut, juste au-dessus de la vidéo */
       .hero-title {
         position: relative;
-        top: 0;
-        left: 0;
         transform: none;
-        font-size: 1rem;
-        margin-bottom: 5px;
+        font-size: 0.7rem; /* Titre réduit */
+        margin-bottom: 2px;
+      }
+      /* Le conteneur vidéo occupe le reste de l'espace */
+      .video-container {
+        width: 100%;
+        height: calc(25vh - 20px); /* 20px approximatif pour le titre */
+        position: relative;
+      }
+      .bg-video {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;  /* Affiche l'intégralité de la vidéo */
+        object-position: center;
+      }
+      /* Réduire le texte du footer */
+      footer p {
+        font-size: 0.6rem;
       }
       /* Masquer le menu classique et afficher l'icône hamburger */
       nav .menu {
@@ -203,7 +206,6 @@
   
   <!-- Section Héros -->
   <section class="hero">
-    <!-- Sur desktop, le titre est centré sur la vidéo ; sur mobile, il apparait juste au-dessus -->
     <div class="hero-title">
       <h1>Maison Baumann</h1>
     </div>
