--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       }
       /* Le titre est positionné en haut, juste au-dessus de la vidéo */
       .hero-title {
-        position: relative;
+        position: centred;
         transform: none;
         font-size: 0.7rem; /* Titre réduit */
         margin-bottom: 2px;
@@ -138,7 +138,7 @@
       .video-container {
         width: 100%;
         height: calc(25vh - 20px); /* 20px approximatif pour le titre */
-        position: relative;
+        position: centred;
       }
       .bg-video {
         width: 100%;
