--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     .overlay {
       display: none;
       position: fixed;
-      top:0;
-      left:0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       background: rgba(0,0,0,0.5);
@@ -74,7 +74,7 @@
     .hero {
       position: relative;
       width: 100%;
-      height: 100vh;  /* Plein écran sur desktop */
+      height: 100vh;
       background-color: #000;
       overflow: hidden;
     }
@@ -120,42 +120,43 @@
     
     /* --- Adaptations pour Mobile --- */
     @media only screen and (max-width: 768px) {
-      /* Réduire la hauteur de la section héro */
       .hero {
-        height: 25vh;
+        /* Divisé en deux parties : titre et vidéo */
+        height: 40vh;
         display: flex;
         flex-direction: column;
         align-items: center;
       }
-      /* Le titre est positionné en haut, juste au-dessus de la vidéo */
+      /* Conteneur titre */
       .hero-title {
-        position: centred;
+        position: relative;
         transform: none;
-        font-size: 0.7rem; /* Titre réduit */
-        margin-bottom: 2px;
+        font-size: 0.8rem;  /* Titre réduit */
+        margin: 0;
+        padding: 5px 0;
       }
-      /* Le conteneur vidéo occupe le reste de l'espace */
+      /* Conteneur vidéo occupe le reste de l'espace */
       .video-container {
+        flex: 1;
         width: 100%;
-        height: calc(25vh - 20px); /* 20px approximatif pour le titre */
-        position: centred;
+        display: flex;
+        align-items: center;
+        justify-content: center;
       }
       .bg-video {
-        width: 100%;
-        height: 100%;
-        object-fit: contain;  /* Affiche l'intégralité de la vidéo */
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
         object-position: center;
       }
-      /* Réduire le texte du footer */
-      footer p {
-        font-size: 0.6rem;
-      }
-      /* Masquer le menu classique et afficher l'icône hamburger */
       nav .menu {
         display: none;
       }
       .hamburger {
         display: block;
+      }
+      footer p {
+        font-size: 0.6rem;
       }
     }
   </style>
