--- a/index.html
+++ b/index.html
@@ -120,25 +120,24 @@
     
     /* --- Adaptations pour Mobile --- */
     @media only screen and (max-width: 768px) {
+      /* Utiliser toute la hauteur du viewport pour centrer le contenu */
       .hero {
-        /* Divisé en deux parties : titre et vidéo */
-        height: 40vh;
+        height: 100vh;
         display: flex;
         flex-direction: column;
-        align-items: center;
       }
-      /* Conteneur titre */
+      /* Zone pour le titre : affiché en haut et centré */
       .hero-title {
+        flex: 0 0 auto;
+        font-size: 0.8rem; /* Titre réduit */
+        text-align: center;
+        margin: 10px 0;
         position: relative;
         transform: none;
-        font-size: 0.8rem;  /* Titre réduit */
-        margin: 0;
-        padding: 5px 0;
       }
-      /* Conteneur vidéo occupe le reste de l'espace */
+      /* La zone vidéo occupe le reste de l'espace et centre la vidéo */
       .video-container {
-        flex: 1;
-        width: 100%;
+        flex: 1 1 auto;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -149,6 +148,7 @@
         object-fit: contain;
         object-position: center;
       }
+      /* Masquer le menu classique et afficher l'icône hamburger */
       nav .menu {
         display: none;
       }
