--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     @media only screen and (max-width: 768px) {
       /* Remplace la vidéo par le collage en fond */
       .hero {
-        background: url('assets/collage_site.jpg') center center / cover no-repeat;
+        background: url(Maison-Baumann/collage_site.jpg') center center / cover no-repeat;
       }
       /* Masquer la vidéo sur mobile */
       .video-container {
