--- a/cart.html
+++ b/cart.html
@@ -18,8 +18,19 @@
         <li><a href="store.html">Boutique</a></li>
         <li><a href="cart.html">Panier</a></li>
       </ul>
+      <div id="hamburger" class="hamburger">&#9776;</div>
     </nav>
   </header>
+  <div id="overlay" class="overlay"></div>
+  <div id="mobile-menu" class="mobile-menu">
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="gallery.html">Collections</a></li>
+      <li><a href="about.html">À propos</a></li>
+      <li><a href="store.html">Boutique</a></li>
+      <li><a href="cart.html">Panier</a></li>
+    </ul>
+  </div>
 
   <!-- Panier -->
   <main class="cart">
