--- a/gallery.html
+++ b/gallery.html
@@ -18,72 +18,45 @@
         <li><a href="store.html">Boutique</a></li>
         <li><a href="cart.html">Panier</a></li>
       </ul>
+      <div id="hamburger" class="hamburger">&#9776;</div>
     </nav>
   </header>
+  <div id="overlay" class="overlay"></div>
+  <div id="mobile-menu" class="mobile-menu">
+    <ul>
+      <li><a href="index.html">Accueil</a></li>
+      <li><a href="gallery.html">Collections</a></li>
+      <li><a href="about.html">À propos</a></li>
+      <li><a href="store.html">Boutique</a></li>
+      <li><a href="cart.html">Panier</a></li>
+    </ul>
+  </div>
 
   <!-- Titre de la page -->
   <main class="gallery">
     <h1 class="gallery-title">MAISON BAUMANN 2024/2025</h1>
-    
     <!-- Conteneur slider -->
     <div class="gallery-wrapper">
       <button class="gallery-arrow left desktop" id="gallery-prev">&lt;</button>
       <div class="gallery-scroll">
-        <!-- Chaque image est enveloppée dans un conteneur pour l'ambilight -->
-        <div class="gallery-item">
-          <img src="gallery_1.jpg" alt="Collection 1">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_2.jpg" alt="Collection 2">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_3.jpg" alt="Collection 3">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_4.jpg" alt="Collection 4">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_5.jpg" alt="Collection 5">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_6.jpg" alt="Collection 6">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_7.jpg" alt="Collection 7">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_8.jpg" alt="Collection 8">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_9.jpg" alt="Collection 9">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_10.jpg" alt="Collection 10">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_11.jpg" alt="Collection 11">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_12.jpg" alt="Collection 12">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_13.jpg" alt="Collection 13">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_14.jpg" alt="Collection 14">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_15.jpg" alt="Collection 15">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_16.jpg" alt="Collection 16">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_17.jpg" alt="Collection 17">
-        </div>
-        <div class="gallery-item">
-          <img src="gallery_18.jpg" alt="Collection 18">
-        </div>
+        <div class="gallery-item"><img src="gallery_1.jpg" alt="Collection 1"></div>
+        <div class="gallery-item"><img src="gallery_2.jpg" alt="Collection 2"></div>
+        <div class="gallery-item"><img src="gallery_3.jpg" alt="Collection 3"></div>
+        <div class="gallery-item"><img src="gallery_4.jpg" alt="Collection 4"></div>
+        <div class="gallery-item"><img src="gallery_5.jpg" alt="Collection 5"></div>
+        <div class="gallery-item"><img src="gallery_6.jpg" alt="Collection 6"></div>
+        <div class="gallery-item"><img src="gallery_7.jpg" alt="Collection 7"></div>
+        <div class="gallery-item"><img src="gallery_8.jpg" alt="Collection 8"></div>
+        <div class="gallery-item"><img src="gallery_9.jpg" alt="Collection 9"></div>
+        <div class="gallery-item"><img src="gallery_10.jpg" alt="Collection 10"></div>
+        <div class="gallery-item"><img src="gallery_11.jpg" alt="Collection 11"></div>
+        <div class="gallery-item"><img src="gallery_12.jpg" alt="Collection 12"></div>
+        <div class="gallery-item"><img src="gallery_13.jpg" alt="Collection 13"></div>
+        <div class="gallery-item"><img src="gallery_14.jpg" alt="Collection 14"></div>
+        <div class="gallery-item"><img src="gallery_15.jpg" alt="Collection 15"></div>
+        <div class="gallery-item"><img src="gallery_16.jpg" alt="Collection 16"></div>
+        <div class="gallery-item"><img src="gallery_17.jpg" alt="Collection 17"></div>
+        <div class="gallery-item"><img src="gallery_18.jpg" alt="Collection 18"></div>
       </div>
       <button class="gallery-arrow right desktop" id="gallery-next">&gt;</button>
     </div>
